Proyecto con las rutas establecidas

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -9,7 +9,7 @@
     <!-- ============================================================== -->
     <div class="page-wrapper">
         <app-breadcumbs></app-breadcumbs>
-        <!-- <router-outlet></router-outlet> -->
+        <router-outlet></router-outlet>
         <!-- ============================================================== -->
         <!-- Start Page Content -->
         <!-- ============================================================== -->
