--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,40 @@
-<p>graficas1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico1.leyenda}}</h4>
+                <app-grafico [Labels]="graficos.grafico1.labels" [Data]="graficos.grafico1.data" [Type]="graficos.grafico1.type">
+                </app-grafico>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico2.leyenda}}</h4>
+                <app-grafico [Labels]="graficos.grafico2.labels" [Data]="graficos.grafico2.data" [Type]="graficos.grafico2.type">
+                </app-grafico>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico3.leyenda}}</h4>
+                <app-grafico [Labels]="graficos.grafico3.labels" [Data]="graficos.grafico3.data" [Type]="graficos.grafico3.type">
+                </app-grafico>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico4.leyenda}}</h4>
+                <app-grafico [Labels]="graficos.grafico4.labels" [Data]="graficos.grafico4.data" [Type]="graficos.grafico4.type">
+                </app-grafico>
+            </div>
+        </div>
+    </div>
+</div>
